--- a/zmu-cortex-m/Cargo.toml
+++ b/zmu-cortex-m/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
-name = "zmu-armv6m"
+name = "zmu-cortex-m"
 version = "0.1.0"
 authors = ["Jarmo Torvinen <jarmo.torvinen@iki.fi>"]
+
 [dependencies]
-zmu-cortex-m = {path =  "zmu-cortex-m"}
+byteorder = "0.3"
+bit_field = "0.7.0"
+enum-set = "0.0.7"
