--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,5 @@ name = "zmu-armv6m"
 version = "0.1.0"
 authors = ["Jarmo Torvinen <jarmo.torvinen@iki.fi>"]
 [dependencies]
-zmu-cortex-m = {path =  "zmu-cortex-m"}
+zmu_cortex_m = {path =  "zmu_cortex_m"}
+bit_field = "0.7.0"
