--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "zmu-armv6m"
+name = "zmu"
 version = "0.1.0"
 authors = ["Jarmo Torvinen <jarmo.torvinen@iki.fi>"]
+
 [dependencies]
 zmu_cortex_m = {path =  "zmu_cortex_m"}
 bit_field = "0.7.0"
+clap = "2.19"
