--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Jarmo Torvinen <jarmo.torvinen@iki.fi>"]
 zmu_cortex_m = {path =  "zmu_cortex_m"}
 bit_field = "0.7.0"
 clap = "2.19"
+tabwriter = "1"
