--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,12 @@ tabwriter = "1"
 error-chain = "0.12.0"
 goblin = "0.0.12"
 pad = "0.1.4"
+
+
+[features]
+default = ["armv7m"]
+
+
+armv6m = ["zmu_cortex_m/armv6m"]
+armv7m = ["zmu_cortex_m/armv7m"]
+armv7em = ["zmu_cortex_m/armv7em"]
