--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ Exe/
 Obj/
 zmu_cortex_m/Cargo.lock
 tests/rustbook
-tests/cortex-m-rtfm
-tests/coremark/coremark_v1.0/
+tests/coremark/coremark/
+tests/cortex-m-rtic/
 .idea/
+
