--- a/zmu_cortex_m/Cargo.toml
+++ b/zmu_cortex_m/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 byteorder = "1"
+enum-as-inner = "0.6.1"
 enum-set = "0.0.8"
 gdbstub = "0.7"
 gdbstub_arch = "0.3"
